--- a/sources.bib
+++ b/sources.bib
@@ -151,6 +151,19 @@
  year = {1963}
 }
 
+@book {tomdieck,
+    AUTHOR = {tom Dieck, Tammo},
+     TITLE = {Topologie},
+    SERIES = {de Gruyter Lehrbuch. [de Gruyter Textbook]},
+ PUBLISHER = {Walter de Gruyter \& Co., Berlin},
+      YEAR = {1991},
+     PAGES = {x+401},
+      ISBN = {3-11-013187-0; 3-11-012463-7},
+   MRCLASS = {55-01 (57-01)},
+  MRNUMBER = {1150244},
+MRREVIEWER = {J.\ M.\ Boardman},
+}
+
 
 %J. Milnor. On the cobordism ring Ω∗ and a complex analogue, part i. American Journal of
 Mathematics, 82(3):505–521, 1960.
